--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "elasticsearch/elasticsearch": "^7.17.0",
         "fitzwilliammuseum/maps": "master",
         "gmostafa/php-graphql-client": "^1.13",
+        "graham-campbell/markdown": "^16.0",
         "guzzlehttp/guzzle": "^7.4.5",
         "imliam/laravel-blade-helper": "^1.6.0",
         "jmikola/geojson": "^1.1.1",
@@ -45,7 +46,6 @@
         "spatie/laravel-googletagmanager": "^2.6.6",
         "spatie/laravel-html": "^3.12",
         "spatie/laravel-ignition": "^2.0",
-        "spatie/laravel-markdown": "^2.7.1",
         "spatie/laravel-missing-page-redirector": "^2.9.2",
         "spatie/laravel-responsecache": "^7.4.1",
         "spatie/laravel-sitemap": "^7.3.6",
